# inherigraph

./: LICENSE  Makefile  README.md  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: installation.md
src/inherigraph/: __init__.py  cli.py  inherigraph.py
tests/: test_inherigraph.py
