[metadata]
author = Alvaro Clemente
author_email = clemente.varo@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Visualize the Inheritance Graph of Python Object
license = MIT license
keywords = inherigraph
name = inherigraph
url = https://github.com/alvaroclementev/inherigraph
version = 0.1.0

[options]
install_requires =
    typer>=0.6
    rich>=10.11.0
include_package_data = True
package_dir=
    =src
packages=find:
tests_require = pytest
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    inherigraph=inherigraph.cli:entrypoint

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:inherigraph/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
