[metadata]
name = inherigraph
version = 0.1.0
description = Visualize the Inheritance Graph of Python Object
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alvaroclementev/inherigraph
author = Alvaro Clemente
author_email = clemente.varo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
keywords = inherigraph

[options]
packages = find:
install_requires =
    rich>=10.11.0
    typer>=0.6
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
tests_require = pytest
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    inherigraph=inherigraph.cli:entrypoint

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:inherigraph/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
